@@ -208,6 +208,26 @@
 # The username referred to here is the same as in password_file. It is
 # not the clientid.
 #
+#
+# If is also possible to define ACLs based on pattern substitution within the
+# topic. The patterns available for substition are:
+#
+# %c to match the client id of the client
+# %u to match the username of the client
+#
+# The substitution pattern must be the only text for that level of hierarchy.
+#
+# The form is the same as for the topic keyword, but using pattern as the
+# keyword.
+# Pattern ACLs apply to all users even if the "user" keyword has previously
+# been given.
+#
+# pattern [read|write] <topic>
+#
+# Example:
+#
+# pattern write sensor/%u/data
+#
 #acl_file
 
 # =================================================================
